adding responsive feature

--- a/index.html
+++ b/index.html
@@ -8,15 +8,22 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>
-        Color guessing game<br><span class="rgb">rgb(125, 89 ,45)</span><br>Guess the color above
-    </h1>
+    <div class="content">
+        <h2>Color guessing game</h2>
+        <h2>Color guessing game</h2>
+    </div>
+    <div class="color">
+        Guess the color:<span class="rgb">rgb(125, 89 ,45)</span>
+    </div>
 
     <div class="line">
-        <button id="restart">Restart</button>
-        <span class="status">Let's Play</span>
         <button id="easybtn">Easy</button>
+        <button id="restart">Restart</button>
         <button id="hardbtn">Hard</button>
+    </div>
+
+    <div class="stat">
+        <span class="status">Let's Play</span>
     </div>
 
     <div class="allbox">
